backend:debug && add CustomConstant